Blog alignment fix (#1299)
* blog alignment fix

* better fix

--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-blog-post.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-blog-post.scss
@@ -65,7 +65,8 @@
       }
 
       &__content {
-        width: calc(100% - $spacer * 19);
+        min-width: calc(100% - $spacer * 19);
+        max-width: 100%;
       }
     }
   }
